06_Argo_Rollouts_Gateway_API/gateway_api/gateway-by-percentage/httproute-distinct-filters.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-httproute
  namespace: api
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: web
  hostnames:
  - api-192.168.39.200.nip.io
  rules:
  - matches:
    - path:
        value: /api/v1
        type: PathPrefix
    backendRefs:
    - name: api-svc
      port: 3000
      weight: 75
      filters:
      - type: ExtensionRef
        extensionRef:
          group: traefik.io
          kind: Middleware
          name: ratelimit-10rps
    - name: canary-api-svc
      port: 3000
      weight: 25
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /api
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: Access-Control-Allow-Origin
          value: "*"
        remove:
        - X-Powered-By
